# HCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Resources/: Test.h
Source/: Compiler.cpp  Compiler.h  HCode.h  Lexer.cpp  Lexer.h  MainTest.cpp  Parser.cpp  Parser.h  Tokens.cpp  Tokens.h  Utils.h  VM.cpp  VM.h
Source/Tests/: MainTests.cpp
